[tool.poetry]
name = "YahooFantasyProject"
version = "1"
description = ""
authors = ["Massimo Adhikary and Jason Gialamas"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.4"
yahoo-oauth = "^1.1"
yahoo-fantasy-api = "2.5.0"
yfpy = "^4.1.4"
path3 = "^3.0a1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
